fix: layout shift

--- a/common/loginpage/src/styles.less
+++ b/common/loginpage/src/styles.less
@@ -1492,6 +1492,7 @@ li.menu-item {
 
 #box-create-new {
     margin-bottom: 40px;
+    overflow: auto;
 }
 
 svg.icon:not(.icon-colored) {
